--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       }
 
       try {
-        const res = await fetch(`/api?rota=perfil/resetar-senha?token=${encodeURIComponent(token)}`, {
+        const res = await fetch(`/api?rota=perfil/resetar-senha&token=${encodeURIComponent(token)}`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ senha, confirmarSenha }),
