--- a/paginas/editar-produto.html
+++ b/paginas/editar-produto.html
@@ -108,7 +108,7 @@
     }
 
     try {
-      const response = await fetch(`/api?rota=produtos/editar?id=${produtoId}`, {
+      const response = await fetch(`/api?rota=produtos/editar&id=${produtoId}`, {
         method: 'DELETE',
         headers: {
           'Content-Type': 'application/json',
@@ -222,7 +222,7 @@
     async function editarProduto(id, dados, usuario) {
       if (!id || !usuario) throw new Error('ID ou usuário ausente');
 
-      const response = await fetch(`/api?rota=produtos/editar?id=${id}`, {
+      const response = await fetch(`/api?rota=produtos/editar&id=${id}`, {
         method: 'PUT',
         headers: {
           'Content-Type': 'application/json',
