--- a/paginas/home.html
+++ b/paginas/home.html
@@ -23,6 +23,7 @@
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="../assets/css/home.css" />
+    <link rel="stylesheet" href="../assets/css/carrinho.css">
 </head>
 <body>
     <script>
