--- a/paginas/detalhes-produto.html
+++ b/paginas/detalhes-produto.html
@@ -7,6 +7,7 @@
   <title>Detalhes do Produto - EcoMarket</title>
   <!-- Estilos -->
   <link rel="stylesheet" href="../assets/css/detalhes-produto.css" />
+  <link rel="stylesheet" href="../assets/css/carrinho.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- Metadados para SEO -->
   <meta name="description" content="Detalhes completos do produto no EcoMarket. Conheça as características, preço e adquira produtos sustentáveis com facilidade." />
@@ -101,7 +102,7 @@
 
       nomeEl.textContent = produto.nome;
       descEl.innerHTML = produto.descricao.replace(/\n/g, '<br>');
-      precoEl.textContent = `R$ ${produto.preco.toFixed(2)}`;
+      precoEl.textContent = `R$ ${produto.preco.toFixed(2).replace('.',',')}`;
 
       imagensEl.innerHTML = "";
       const fotos = (produto.fotos && produto.fotos.length > 0) ? produto.fotos : ["../assets/img/placeholder.png"];
