Atualizar o conta.html

--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -90,12 +90,12 @@
 
       <p>
         <label for="isenha">Senha</label>
-        <input type="password" name="senha" id="isenha" required minlength="6" placeholder="Senha Atual">
+        <input type="password" name="senha" id="isenha" required minlength="5" placeholder="Senha Atual">
       </p>
 
       <p>
         <label for="insenha">Nova Senha (opcional)</label>
-        <input type="password" name="nsenha" id="insenha" placeholder="Nova senha">
+        <input type="password" name="nsenha" id="insenha" minlength="8" placeholder="Nova senha">
       </p>
 
       <div id="botoes-container">
