--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -6,6 +6,7 @@
   <title>Meus Pedidos - EcoMarket Samavi</title>
   <link rel="stylesheet" href="../assets/css/pedidos.css" />
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 <body>
   <div id="feedback" class="feedback"></div>
