Adição de Metrícas
Foi adicionado uma importação do vercel para analisar metrícas de uso

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     </section>
   </main>
   <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script type="module" src="./assets/js/modules/feedback.js"></script>
   <script src="./assets/js/auth.js" defer></script>
   <script>
