--- a/paginas/detalhes-produto.html
+++ b/paginas/detalhes-produto.html
@@ -61,6 +61,7 @@
     </section>
   </main>
   <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
       const urlParams = new URLSearchParams(window.location.search);
