--- a/paginas/finalizar-compra.html
+++ b/paginas/finalizar-compra.html
@@ -43,6 +43,7 @@
   </div>
   </div>
   <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script>
     function formatarTelefone(telefone) {
       // Remove tudo que não é dígito
