--- a/paginas/home.html
+++ b/paginas/home.html
@@ -130,6 +130,7 @@
     </footer>
 
     <!-- SCRIPTS -->
+    <script src="../assets/js/vercel-analytics.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
