--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -53,6 +53,8 @@
       </div>
     </div>
   </div>
+  <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script type="module" src="../assets/js/modules/feedback.js"></script>
   <script type="module" src="../assets/js/modules/pedidos.js"></script>
   <script type="module" src="../assets/js/modules/config.js"></script>
