--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -87,6 +87,7 @@
       <div class="produtos-grid" id="produtos-lista"></div>
     </main>
     <!-- SCRIPTS -->
+    <script src="../assets/js/vercel-analytics.js"></script>
     <script type="module" src="../assets/js/modules/config.js"></script>
     <script type="module" src="../assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
