--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -58,6 +58,8 @@
       <button type="submit" aria-label="Cadastrar produto">Cadastrar Produto</button>
     </form>
   </div>
+  <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <!-- ÍCONE IONICONS -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
