--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -127,6 +127,7 @@
   </div>
 
   <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script type="module" src="../assets/js/perfil.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
