--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -44,6 +44,7 @@
     <div id="mensagem-enviada"></div>
   </main>
   <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script type="module" src="../assets/js/modules/feedback.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
