--- a/paginas/editar-produto.html
+++ b/paginas/editar-produto.html
@@ -76,7 +76,8 @@
     </div>
   </div>
 </div>
-
+  <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script type="module">
