--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -91,6 +91,7 @@
   </main>
 
   <!-- SCRIPTS -->
+  <script src="../assets/js/vercel-analytics.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script type="module" src="../assets/js/modules/feedback.js"></script>
